--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "my-todo-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,5 +11,6 @@
   "devDependencies": {
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
-  }
+  },
+  "packageManager": "pnpm@10.15.1"
 }
