--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nuxt/ui": "^3.3.3",
     "vue": "^3.5.18"
   },
   "devDependencies": {
