--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify-json/lucide": "^1.2.66",
     "@nuxt/ui": "^3.3.3",
-    "vue": "^3.5.18"
+    "@tailwindcss/vite": "^4.1.12",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
