--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,6 +12,7 @@
     "@iconify-json/lucide": "^1.2.66",
     "@nuxt/ui": "^3.3.3",
     "@tailwindcss/vite": "^4.1.12",
+    "@vueuse/core": "^13.9.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
