--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "client",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
@@ -17,10 +17,22 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^5.3.0",
+    "@eslint/js": "^9.18.0",
+    "@typescript-eslint/parser": "^8.43.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.35.0",
+    "eslint-plugin-vue": "^10.4.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.4.2",
+    "prettier-eslint": "^16.4.2",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.20.0",
     "vite": "^7.1.2",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.0.5"
   }
 }
