--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.16.1",
   "scripts": {
     "dev": "pnpm --filter client dev",
     "build": "pnpm --filter client build",
@@ -15,5 +15,11 @@
     "@tailwindcss/vite": "^4.1.12",
     "tailwindcss": "^4.1.12",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^5.3.0",
+    "eslint": "^9.35.0",
+    "typescript": "^5.9.2",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
